@@ -22,7 +22,7 @@ docker create --name db_seeder_db -p 50000:50000/tcp monetdb/monetdb:latest
 docker start db_seeder_db
 docker ps
 
-java --enable-preview -cp ${CLASSPATH}:lib/* ch.konnexions.db_seeder.samples.monetdb.I72
+java -cp ${CLASSPATH}:lib/* ch.konnexions.db_seeder.samples.monetdb.I72
 
 echo "--------------------------------------------------------------------------------"
 date +"DATE TIME : %d.%m.%Y %H:%M:%S"
