@@ -2,7 +2,7 @@
 
 rem ------------------------------------------------------------------------------
 rem
-rem run_i4812.bat: Demonstration Issue 4812.
+rem run_i4812.bat: Demonstration Issue 4812 (https://github.com/prestosql/presto/issues/4812).
 rem
 rem ------------------------------------------------------------------------------
 
@@ -16,7 +16,7 @@ echo ---------------------------------------------------------------------------
 echo:| TIME
 echo --------------------------------------------------------------------------------
 
-java --enable-preview -cp %CLASSPATH%;lib/* ch.konnexions.db_seeder.samples.presto.I4812
+java -cp %CLASSPATH%;lib/* ch.konnexions.db_seeder.samples.presto.I4812
 
 echo --------------------------------------------------------------------------------
 echo:| TIME
